[gd_scene load_steps=20 format=3 uid="uid://ck0n3e7m71aoy"]

[ext_resource type="Script" uid="uid://btgg6ulu6in8t" path="res://framework/title_screen.gd" id="1_f6akd"]
[ext_resource type="PackedScene" uid="uid://1ju8eyujir3q" path="res://framework/models/monitor.glb" id="1_m3mpr"]
[ext_resource type="FontFile" uid="uid://cuoy0amwy2mxc" path="res://fonts/VT323/VT323-Regular.ttf" id="3_th5dg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6akd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_th5dg"]
line_spacing = 2.0
font = ExtResource("3_th5dg")
font_size = 32
font_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_size = 2
shadow_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th5dg"]
bg_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_th5dg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sndid"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vromf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qgvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4toer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xr2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yy6u4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jn8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekofo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bbnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmn24"]

[sub_resource type="QuadMesh" id="QuadMesh_sndid"]
size = Vector2(0.12, 0.12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th5dg"]
resource_local_to_scene = true
albedo_color = Color(0.80207, 0.329843, 0.140212, 1)
emission = Color(0.80207, 0.329843, 0.140212, 1)
emission_energy_multiplier = 3.0
emission_operator = 1

[node name="TitleScreen" type="Node3D"]
script = ExtResource("1_f6akd")
BLINK_SPEED = 0.3
PRINT_TIMEOUT = 0.06
TERM_W = 38
TERM_H = 14

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.173648, 0.984808, 0, 0.984808, 0.173648, -1, 7.59039e-09, -4.30473e-08, 7.32191, 2.65801, 0)
projection = 1
size = 2.26

[node name="Monitor" parent="." instance=ExtResource("1_m3mpr")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, 0)

[node name="ScreenLayer" type="CanvasLayer" parent="Monitor"]

[node name="Screen" type="Panel" parent="Monitor/ScreenLayer"]
offset_right = 512.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f6akd")

[node name="Label" type="Label" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 504.0
text = "HÃ¤ckerspiele"
label_settings = SubResource("LabelSettings_th5dg")

[node name="CursorRect" type="Panel" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_right = 13.0
offset_bottom = 5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_th5dg")

[node name="Button" type="Button" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_left = 416.0
offset_top = 621.0
offset_right = 466.0
offset_bottom = 671.0
tooltip_text = "Exit Game"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_th5dg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_sndid")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vromf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0qgvj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4toer")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4xr2k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yy6u4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7jn8m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ekofo")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2bbnd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fmn24")

[node name="Label" type="Label" parent="Monitor/ScreenLayer"]
offset_left = 340.0
offset_right = 511.0
offset_bottom = 81.0

[node name="MarkerTopLeft" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.732, 2.73, 0.93)

[node name="MarkerTopRight" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.731967, 2.73035, 0.93)

[node name="MarkerBottomRight" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.732, 1.508, 0.93)

[node name="PoweroffButton" type="MeshInstance3D" parent="Monitor"]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 0.529363, 1.20559, 0.998548)
mesh = SubResource("QuadMesh_sndid")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_th5dg")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.28281, 3.92547, 1.97244)
light_energy = 2.5
omni_range = 10.0

[node name="OmniLight3D" type="OmniLight3D" parent="OmniLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.353148, -6.17166, -8.26729)
light_energy = 0.8
omni_range = 10.0

[connection signal="mouse_entered" from="Monitor/ScreenLayer/Screen/Button" to="." method="_on_poweroff_button_mouse_entered"]
[connection signal="mouse_exited" from="Monitor/ScreenLayer/Screen/Button" to="." method="_on_poweroff_button_mouse_exited"]
[connection signal="pressed" from="Monitor/ScreenLayer/Screen/Button" to="." method="_on_poweroff_button_pressed"]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="pressed" from="Monitor/ScreenLayer/Screen/Button" to="." method="_on_start_button_pressed"]
